# 2026_Hacklahoma_Pet

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: a526a62b5bc3_.py  b637c_add_user_name.py  c748d_user_pets_table.py  d859e_veterinary_vets_visits.py  e9f2a_pet_weight.py  f0a3b_activity_state_logs.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: router.py
backend/app/core/: dependencies.py  security.py
backend/app/crud/: __init__.py  activity_state_log.py  community_post.py  eating_log.py  pet.py  sleep_log.py  user.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  activity.py  activity_state_log.py  base.py  community_post.py  eating_log.py  llm_output.py  media_file.py  milestone.py  pet.py  sleep_log.py  user.py  user_pet.py  vet.py  vet_visit.py
backend/app/schemas/: __init__.py  auth.py  community.py  gemini.py  habits.py  medical_record.py  pet.py  stats.py  user.py  vet.py  vet_visit.py
backend/app/services/: __init__.py  qr_code.py
backend/app/services/ai/: __init__.py  base.py  gemini_provider.py  llama_provider.py  llama_vision_provider.py  registry.py
backend/app/services/notifications/: __init__.py  flags.py  slack.py
backend/app/services/storage/: __init__.py  base.py  digitalocean_storage.py  factory.py  local_storage.py
backend/pet_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: seed_mock_data.py
backend/tests/: conftest.py  test_health.py
backend/tests/api/endpoints/: test_gemini.py  test_media.py  test_notifications.py  test_pets.py  test_stream.py  test_users.py
backend/tests/crud/: test_eating_log.py  test_pet.py  test_sleep_log.py  test_user.py
backend/tests/services/: test_ai_registry.py  test_notifications.py  test_qr_code.py  test_storage.py
frontend/: .env.example  (+4 more)
(+39 files in other folders)
